fixed overflow error, need to get color gradient

--- a/ShowGraph2/results.css
+++ b/ShowGraph2/results.css
@@ -21,25 +21,25 @@ body
 .row
 {
     position: relative;
+    margin-top: 2.5%;
     width:100%;
-    height:30%;
+    height:90%;
 
     display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    flex-flow:wrap;
 
-    overflow-x: auto;
-    overflow-y: hidden;
+    column-gap: 3pt;
+    row-gap: 3pt;
 
-    margin-bottom: 1.5%;
 }
 
 .graphDiv
 {
-    width:50%;
-    height:100%;
-    
+    height:95%;
+    width:25%;   
     
     border-style: solid;
     border-width: 1pt;
